--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookMidtermSpring
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.flyway.baseline-on-migrate=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
